@@ -107,7 +107,7 @@ ext {
     springSecurityVersion = project.hasProperty('springSecurityVersion') ? project.springSecurityVersion : '6.0.0-SNAPSHOT'
     springVersion = project.hasProperty('springVersion') ? project.springVersion : '6.0.0-SNAPSHOT'
     springWsVersion = '4.0.0-SNAPSHOT'
-    testcontainersVersion = '1.17.1'
+    testcontainersVersion = '1.17.3'
     tomcatVersion = '10.0.21'
     xmlUnitVersion = '2.9.0'
     xstreamVersion = '1.4.19'
@@ -260,6 +260,7 @@ configure(javaProjects) { subproject ->
             exclude group: 'org.hamcrest'
         }
         testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params'
         testImplementation("com.willowtreeapps.assertk:assertk-jvm:$assertkVersion") {
             exclude group: 'org.jetbrains.kotlin'
         }
@@ -838,6 +839,10 @@ project('spring-integration-redis') {
         testImplementation "io.lettuce:lettuce-core:$lettuceVersion"
         testImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
         testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    }
+
+    tasks.withType(JavaForkOptions) {
+        jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
     }
 }
 
